<resources>
    <string name="app_name">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="dash">-</string>
    <string name="offices">Offices</string>
    <string name="text">%1$s</string>
    <string name="address">%1$s\n%2$s</string>
    <string name="fidelity_national_title">Fidelity National Title</string>
</resources>